k8-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-app
  labels:
    app: stock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-app
  template:
    metadata:
      labels:
        app: stock-app
    spec:
      containers:
      - name: stock
        image: madhurchandran/stock-insights:v1
        ports:
        - containerPort: 80
