k8-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-app-service
spec:
  type: NodePort
  selector:
    app: stock-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
